<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_dynamics_sim</name>
  <version>0.0.0</version>
  <description>Vehicle dynamics simulation with ROS2 Galactic and Python3.10</description>
  <maintainer email="740365168@qq.com">yxk-vtd</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rosidl_interface_packages>vehicle_dynamics_sim</rosidl_interface_packages>
  </export>
</package>
